<resources>
    <string name="app_name">PowerStrip 9000</string>

    <string name="title_A">ESP001 A</string>
    <string name="title_B">ESP001 B</string>
    <string name="title_C">ESP001 C</string>
    <string name="setTimer">Set timer</string>

    <string name="title_home">SMART K103</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="timer">Timer</string>
    <string name="set_a_timer">Set a timer</string>
    <string name="refresh">refresh</string>
    <string name="rename_device">Rename Device</string>
    <string name="rename_a_device">Rename a device</string>
    <string name="current_name_is">Current name is:</string>
    <string name="new_name">New name</string>
    <string name="rename">rename</string>

</resources>
