<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"

        android:text="@string/title_home"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ESP001A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/title_A"
        app:layout_constraintEnd_toStartOf="@+id/timerA"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title" />

    <Button
        android:id="@+id/ESP001B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/title_B"
        app:layout_constraintEnd_toStartOf="@+id/timerB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ESP001A" />

    <Button
        android:id="@+id/ESP001C"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/title_C"
        app:layout_constraintEnd_toStartOf="@+id/timerC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ESP001B" />

    <ImageButton
        android:id="@+id/timerA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/timer"
        app:layout_constraintBottom_toBottomOf="@+id/ESP001A"
        app:layout_constraintEnd_toStartOf="@+id/statusA"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ESP001A"
        app:layout_constraintTop_toTopOf="@+id/ESP001A"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <ImageButton
        android:id="@+id/timerB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/timer"
        app:layout_constraintBottom_toBottomOf="@+id/ESP001B"
        app:layout_constraintEnd_toStartOf="@+id/statusB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ESP001B"
        app:layout_constraintTop_toTopOf="@+id/ESP001B"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <ImageButton
        android:id="@+id/timerC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/timer"
        app:layout_constraintBottom_toBottomOf="@+id/ESP001C"
        app:layout_constraintEnd_toStartOf="@+id/statusC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ESP001C"
        app:layout_constraintTop_toTopOf="@+id/ESP001C"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <Button
        android:id="@+id/statusC"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/timerC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timerC" />

    <Button
        android:id="@+id/statusB"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/timerB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timerB" />

    <Button
        android:id="@+id/statusA"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/timerA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timerA" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/refresh"
        app:layout_constraintBottom_toBottomOf="@+id/page_title"
        app:layout_constraintEnd_toEndOf="@+id/timerA"
        app:layout_constraintStart_toStartOf="@+id/timerA"
        app:layout_constraintTop_toTopOf="@+id/page_title"
        app:srcCompat="@android:drawable/stat_notify_sync" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ESP001C" />


</androidx.constraintlayout.widget.ConstraintLayout>